fix status not visible

--- a/frontend/styles/common.css
+++ b/frontend/styles/common.css
@@ -182,7 +182,10 @@ button {
   background-color: rgb(238, 129, 129);
   position: fixed;
   left: 300px;
-  top: 80px;
+  top: 115px;
+
+  font-weight: bold;
+  font-size: 16px;
 }
 
 .version {
